--- a/sass/modules/_comment.scss
+++ b/sass/modules/_comment.scss
@@ -35,7 +35,7 @@
   }
 
   &:last-child {
-    @extend %reset-element-spacing;
+    @include reset-element-spacing();
   }
 }
 
@@ -80,7 +80,7 @@
   border-bottom: 1px solid $border-color;
 
   &:last-child {
-    @extend %reset-element-spacing;
+    @include reset-element-spacing();
   }
 }
 
