--- a/sass/modules/_meta-data.scss
+++ b/sass/modules/_meta-data.scss
@@ -14,7 +14,7 @@
     margin-left: 0;
   }
 
-  @include breakpoint(40em) {
+  @include breakpoint(51em) {
     float: left;
   }
 }
@@ -40,11 +40,6 @@
   background-color: $white;
 
   @include border-radius($border-radius);
-
-  // We have to style directly on <a> because of Drupal's output
-  a {
-
-  }
 }
 
 .meta-data--author-wrapper {
