--- a/sass/theme/_layout.scss
+++ b/sass/theme/_layout.scss
@@ -95,8 +95,11 @@
   @extend %layout--wrapper;
 
   .layout-element-alpha {
+    @include element-spacing(2em);
+
     @include breakpoint(45em) {
       @include zen-grid-item(8.5, 1);
+      @include reset-element-spacing();
 
       padding-left: 0;
     }
