--- a/sass/theme/_placeholders.scss
+++ b/sass/theme/_placeholders.scss
@@ -46,19 +46,6 @@
 }
 
 
-%element-spacing {
-  border-bottom: 1px solid $border-color;
-  margin-bottom: 1em;
-  padding-bottom: 1em;
-}
-
-%reset-element-spacing {
-  border-bottom: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-
 /* Icons
    ================================================================================================================== */
 
